--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1 class="title"><img src="./logo.png"></h1>
-    <a href="#" class="blog">Blog</a>
+    <a href="blogs.html" class="blog">Blog</a>
   </header>
   <!-- <h1 class="title"><img src="./logo.png" /></h1> -->
   <div id="show-time">0 seconds</div>
