--- a/blogs.html
+++ b/blogs.html
@@ -14,9 +14,9 @@
         <h1 class="title"><img src="./logo.png"></h1>
         <a href="index.html" class="blog">Home</a>
     </header>
-    <section id="articles" class="box-container">
-        <article>
-            <h2>Local Storage Vs. Session Storage</h2>
+    <section id="blogs" class="box-container">
+        <div>
+            <h2>Local Storage VS Session Storage</h2>
             <p>
                 <b>Session Storage:</b> The sessionStorage object stores data only
                 for a session. It means that the data stored in the sessionStorage
@@ -27,9 +27,9 @@
                 to store data after the browser is closed. It means that data stored
                 in localStorage does not expire.
             </p>
-        </article>
-        <article>
-            <h2>Global Scope Vs. Block Scope</h2>
+        </div>
+        <div>
+            <h2>Global Scope VS Block Scope</h2>
             <p><b>Scope:</b> Visibility or Accessibility of a variable.</p>
             <p>
                 <b>Global Scope:</b> If a variable is declared outside all functions
@@ -42,8 +42,8 @@
                 within a curly brace ({}), you can access this variable only within
                 that curly brace.
             </p>
-        </article>
-        <article>
+        </div>
+        <div>
             <h2>What is Event Loop?</h2>
             <p>
                 <b>Event Loop:</b> It's a fundamental piece of the JavaScript engine
@@ -51,8 +51,8 @@
                 the call stack is empty it puts callback function in call stact from
                 task queues.
             </p>
-        </article>
-        <article>
+        </div>
+        <div>
             <h2>When do we get <code>undefined</code> in JavaScript?</h2>
             <p>
                 <b>1. When value is not defined.</b> <br>
@@ -63,7 +63,7 @@
                     exist.</b>
                 <br>
             </p>
-        </article>
+        </div>
     </section>
 
 </body>
