--- a/blogs.html
+++ b/blogs.html
@@ -18,27 +18,27 @@
         <div>
             <h2>Local Storage VS Session Storage</h2>
             <p>
-                <b>Session Storage:</b> The sessionStorage object stores data only
+                <span>Session Storage:</span> The sessionStorage object stores data only
                 for a session. It means that the data stored in the sessionStorage
                 will be deleted when the browser is closed.
             </p>
             <p>
-                <b>Local Storage:</b> Unlike sessionStorage localStorage continues
+                <span>Local Storage:</span> Unlike sessionStorage localStorage continues
                 to store data after the browser is closed. It means that data stored
                 in localStorage does not expire.
             </p>
         </div>
         <div>
             <h2>Global Scope VS Block Scope</h2>
-            <p><b>Scope:</b> Visibility or Accessibility of a variable.</p>
+            <p><span>Scope:</span> Visibility or Accessibility of a variable.</p>
             <p>
-                <b>Global Scope:</b> If a variable is declared outside all functions
+                <span>Global Scope:</span> If a variable is declared outside all functions
                 or curly braces ({}), it is said to be defined in the global scope.
                 Once you’ve declared a global variable, you can use that variable
                 anywhere in your code, even in functions.
             </p>
             <p>
-                <b>Block Scope:</b> When you declare a variable with const or let
+                <span>Block Scope:</span> When you declare a variable with const or let
                 within a curly brace ({}), you can access this variable only within
                 that curly brace.
             </p>
@@ -46,7 +46,7 @@
         <div>
             <h2>What is Event Loop?</h2>
             <p>
-                <b>Event Loop:</b> It's a fundamental piece of the JavaScript engine
+                <span>Event Loop:</span> It's a fundamental piece of the JavaScript engine
                 that always monitor call stack, task queue and microtask queue. If
                 the call stack is empty it puts callback function in call stact from
                 task queues.
@@ -55,12 +55,12 @@
         <div>
             <h2>When do we get <code>undefined</code> in JavaScript?</h2>
             <p>
-                <b>1. When value is not defined.</b> <br>
-                <b>2. When a function does not return anything it return
-                    undefined.</b>
+                <span>1. When value is not defined.</span> <br>
+                <span>2. When a function does not return anything it return
+                    undefined.</span>
                 <br>
-                <b>3. When you try to access a property of an object that does not
-                    exist.</b>
+                <span>3. When you try to access a property of an object that does not
+                    exist.</span>
                 <br>
             </p>
         </div>
